--- a/package.json
+++ b/package.json
@@ -7,14 +7,26 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.2",
+    "@chakra-ui/theme-tools": "^1.3.1",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@supabase/supabase-js": "^1.28.5",
+    "@supabase/ui": "^0.36.1",
+    "framer-motion": "^5.3.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "typescript": "4.0"
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19",
+    "typescript": "4.3.2"
   }
 }
