--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@supabase/supabase-js": "^1.28.5",
     "@supabase/ui": "^0.36.1",
     "framer-motion": "^5.3.3",
-    "next": "latest",
+    "next": "12.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recharts": "^2.1.6",
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
