--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.6.0",
     "@supabase/supabase-js": "^1.28.5",
     "@supabase/ui": "^0.36.1",
+    "chrome-aws-lambda": "^10.1.0",
     "framer-motion": "^5.3.3",
     "next": "12.0.6",
+    "puppeteer-core": "^13.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "recharts": "^2.1.6",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
+    "@types/puppeteer-core": "^5.4.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.4.0",
